--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,9 @@
 - 
   name: Exercise for setting up a web server in an EC 
   hosts: all
-  user: ubuntu
+  remote_user: ubuntu
   become: true
   become_method: sudo
   become_user: root
-  roles:
-  - setup
+  roles: 
+    - setup
