--- a/template.yml
+++ b/template.yml
@@ -24,3 +24,6 @@ Resources:
           FromPort: '3000'
           ToPort: '3000'
           CidrIp: 0.0.0.0/0 
+      Tags: 
+        - Key: Name
+          Value: Ansible_Node
