--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,10 @@ jobs:
 workflows:
   myWorkflow:
     jobs:
-      # - create_infrastructure
-      - configure_infrastructure
+      - create_infrastructure
+      - configure_infrastructure:
+          requires:
+            - create_infrastructure
       - smoke_test:
           requires:
             - configure_infrastructure
