--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
           command: |
             aws ec2 describe-tags \
             --filters "Name=tag:Name,Values=Ansible_Node" \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text >> ~/inventory.txt
       
       - save_cache:
