--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
           name: Get public IP
           command: |
             aws ec2 describe-tags \
-            --filters "Name=Ansible_Node" \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:Name,Values=Ansible_Node" \
+            --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
             --output text >> ~/inventory.txt
       
       - save_cache:
