--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             aws ec2 describe-tags \
             --filters "Name=tag:Name,Values=Ansible_Node" \
             --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
-            --output text >> /tmp/workspace/inventory-{{ .Environment.CIRCLE_WORKFLOW_ID }}.txt
+            --output text >> /tmp/workspace/inventory.txt
       
       - save_cache:
           key: inventory-{{ .Environment.CIRCLE_WORKFLOW_ID }}
@@ -46,7 +46,7 @@ jobs:
             - /tmp/workspace/
 
       - run:
-          command: cat /tmp/workspace/inventory-{{ .Environment.CIRCLE_WORKFLOW_ID }}
+          command: cat /tmp/workspace/inventory.txt
 
 #   configure_infrastructure: 
 #     docker:
