--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,16 +16,12 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install tar utility
-          command: |
-            yum install -y tar gzip
-      - run:
           name: Create Cloudformation Stack
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
               --stack-name myStack-setup \
-              --region us-east-1
+              --region us-east-1 >> inventory.txt
       
       - run:
           name: crate workspace folder
