--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             aws cloudformation deploy \
               --template-file template.yml \
               --stack-name myStack-setup \
-              --region us-east-1 >> inventory.txt
+              --region us-east-1
       
       - run:
           name: crate workspace folder
@@ -31,11 +31,11 @@ jobs:
           name: Get public IP
           command: |
             echo "[all]" > inventory.txt
-            aws ec2 describe-tags \
-            --filters "Name=tag:Name,Values=Ansible_Node" \
-            --query 'Reservations[*].Instances[*].[PublicIpAddress]' \
-            --output text >> /tmp/workspace/inventory.txt
-      
+            aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:Name,Values=Ansible_Node" "Name=instance-state-name,Values=running" \
+            --output text >> inventory.txt
+
       - save_cache:
           key: inventory-{{ .Environment.CIRCLE_WORKFLOW_ID }}
           paths:
@@ -44,49 +44,50 @@ jobs:
       - run:
           command: cat /tmp/workspace/inventory.txt
 
-#   configure_infrastructure: 
-#     docker:
-#       - image: python:3.7-alpine3.11
-#     steps:
-#       - checkout
-#       - add_ssh_keys:
-#           fingerprints: 
-#             - "46:55:b0:51:d8:5f:2a:a7:1f:09:28:e8:89:63:da:f5"
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: 
+            - "46:55:b0:51:d8:5f:2a:a7:1f:09:28:e8:89:63:da:f5"
 
-#       - run: 
-#           name: Install openssh
-#           command: |
-#             apk add openssh-client
+      - run: 
+          name: Install openssh
+          command: |
+            apk add openssh-client
 
-#       - run:
-#           name: Install Ansible
-#           command: |
-#             apk add --update ansible
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
 
-#       - attach_workspace:
-#           at: /tmp/workspace
-
-#       - run:
-#           name: Run playbook and Configure server
-#           command: |
-#             ansible-playbook -i /tmp/workspace/inventory.txt main.yml
+      - restore_cache:
+          keys:
+            - inventory-{{ .Environment.CIRCLE_WORKFLOW_ID }}
             
-#   smoke_test:
-#     docker:
-#       - image: amazon/aws-cli
-#     steps:
-#       - run:
-#           name: Test job
-#           command:  return 1
-#       - destroy_environment 
+      - run:
+          name: Run playbook and Configure server
+          command: |
+            ansible-playbook -i /tmp/workspace/inventory.txt main.yml
+            
+  smoke_test:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - run:
+          name: Test job
+          command:  return 1
+      - destroy_environment 
 
 workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-      # - configure_infrastructure:
-      #     requires:
-      #       - create_infrastructure
-      # - smoke_test:
-      #     requires:
-      #       - configure_infrastructure
+      - configure_infrastructure:
+          requires:
+            - create_infrastructure
+      - smoke_test:
+          requires:
+            - configure_infrastructure
