--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,6 @@ workflows:
       - configure_infrastructure:
           requires:
             - create_infrastructure
-      - smoke_test:
-          requires:
-            - configure_infrastructure
+      # - smoke_test:
+      #     requires:
+      #       - configure_infrastructure
